# Kontainer

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  com.github.DenysMb.Kontainer.json  io.github.DenysMb.Kontainer.desktop  io.github.DenysMb.Kontainer.json  io.github.DenysMb.Kontainer.metainfo.xml  org.kde.kontainer.desktop
LICENSES/: MIT.txt
po/: CMakeLists.txt  kontainer.pot
po/de/: kontainer.po
po/nl/: kontainer.po
po/pl/: kontainer.po
po/pt/: kontainer.po
src/: CMakeLists.txt  distroboxmanager.cpp  distroboxmanager.h  main.cpp
src/core/: distroboxcli.cpp  distroboxcli.h  distroboxmanager.cpp  distroboxmanager.h  packageinstallcommand.cpp  packageinstallcommand.h  terminallauncher.cpp  terminallauncher.h
src/qml/: About.qml  ApplicationsWindow.qml  DistroboxCloneDialog.qml  DistroboxCreateDialog.qml  DistroboxRemoveDialog.qml  DistroboxShortcutDialog.qml  ErrorDialog.qml  FilePickerDialog.qml  Main.qml
src/qml/components/: ContainerActionsToolbar.qml  ContainerBadge.qml  ContainerCard.qml  ContainerListStatus.qml  MainContainersPage.qml  MainGlobalDrawer.qml
src/utils/: distrocolors.cpp  distrocolors.h  distroicons.cpp  distroicons.h
